@@ -202,7 +202,7 @@ CONFIG_STM32_MEDIUMDENSITY=y
 # CONFIG_STM32_CAN1 is not set
 CONFIG_STM32_CRC=y
 CONFIG_STM32_DMA1=y
-CONFIG_STM32_DMA2=y
+# CONFIG_STM32_DMA2 is not set
 # CONFIG_STM32_DAC1 is not set
 # CONFIG_STM32_DAC2 is not set
 # CONFIG_STM32_I2C1 is not set
@@ -287,7 +287,7 @@ CONFIG_ARCH_HAVE_RAMVECTORS=y
 CONFIG_BOARD_LOOPSPERMSEC=5483
 # CONFIG_ARCH_CALIBRATION is not set
 CONFIG_ARCH_HAVE_INTERRUPTSTACK=y
-CONFIG_ARCH_INTERRUPTSTACK=0
+CONFIG_ARCH_INTERRUPTSTACK=156
 
 #
 # Boot options
@@ -374,19 +374,19 @@ CONFIG_NPTHREAD_KEYS=0
 CONFIG_NFILE_DESCRIPTORS=5
 CONFIG_NFILE_STREAMS=5
 CONFIG_NAME_MAX=8
-CONFIG_PREALLOC_MQ_MSGS=2
+CONFIG_PREALLOC_MQ_MSGS=1
 CONFIG_MQ_MAXMSGSIZE=132
 CONFIG_MAX_WDOGPARMS=2
-CONFIG_PREALLOC_WDOGS=4
-CONFIG_PREALLOC_TIMERS=4
+CONFIG_PREALLOC_WDOGS=2
+CONFIG_PREALLOC_TIMERS=2
 
 #
 # Stack and heap information
 #
-CONFIG_IDLETHREAD_STACKSIZE=512
-CONFIG_USERMAIN_STACKSIZE=1008
+CONFIG_IDLETHREAD_STACKSIZE=128
+CONFIG_USERMAIN_STACKSIZE=880
 CONFIG_PTHREAD_STACK_MIN=256
-CONFIG_PTHREAD_STACK_DEFAULT=600
+CONFIG_PTHREAD_STACK_DEFAULT=464
 
 #
 # Device Drivers
@@ -465,8 +465,8 @@ CONFIG_USART2_SERIAL_CONSOLE=y
 #
 # USART2 Configuration
 #
-CONFIG_USART2_RXBUFSIZE=64
-CONFIG_USART2_TXBUFSIZE=64
+CONFIG_USART2_RXBUFSIZE=32
+CONFIG_USART2_TXBUFSIZE=32
 CONFIG_USART2_BAUD=115200
 CONFIG_USART2_BITS=8
 CONFIG_USART2_PARITY=0
@@ -660,11 +660,6 @@ CONFIG_LIB_SENDFILE_BUFSIZE=0
 # Non-standard Library Support
 #
 # CONFIG_SCHED_WORKQUEUE is not set
-# CONFIG_SCHED_HPWORK is not set
-# CONFIG_SCHED_WORKPRIORITY is not set
-# CONFIG_SCHED_WORKPERIOD is not set
-# CONFIG_SCHED_WORKSTACKSIZE is not set
-# CONFIG_SCHED_LPWORK is not set
 # CONFIG_LIB_KBDCODEC is not set
 # CONFIG_LIB_SLCDCODEC is not set
 
